Fixed bug #11496: Text and headers are bad readable
git-svn-id: https://svn.typo3.org/TYPO3v4/Core/trunk@6033 709f56b5-9817-0410-a4d7-c38de5d9e867

--- a/typo3/stylesheet.css
+++ b/typo3/stylesheet.css
@@ -33,6 +33,7 @@ div {
 	font-size: 10px;
 	margin: 0px;
 	color: black;
+	line-height: 14px;
 }
 
 form {
@@ -46,7 +47,7 @@ h4 {
 	font-family: Verdana, Arial, Helvetica, sans-serif;
 	font-size: 10px;
 	font-weight: bold;
-	margin: 3px 0px 3px 0px;
+	margin: 6px 0;
 }
 
 /* Occasionally used, eg. in About Modules: */
